# routes/index.js
@@ -14,6 +14,7 @@ routes.get("/chirps", chirpController.getAllChirps);
 routes.get("/chirps/:id", chirpController.getOneChirp);
 routes.post("/chirps", validation.addChirp, chirpController.addChirp);
 routes.put("/chirps/:id", validation.updateChirp, chirpController.updateChirp);
+routes.get("/chirp/error", chirpController.createServererror);
 routes.delete("/chirps/:id", chirpController.deleteChirp);
 
 module.exports = routes
